# player2

./: .env  ;  Cargo.toml  Makefile  README.md  TODO.md
c4/: .env  Containerfile  index.html  package-lock.json  package.json
c4/src/: App.jsx  index.css
c4/src/components/: GameBoard.jsx  GameCell.jsx  GameColumn.jsx  INFO.md  component-styles.css
c4/src/lib/: INFO.md  api.js  check-winner.js  utils.js
c4/src/pages/: HomePage.jsx  INFO.md  page-styles.css
client/: .env  .env.example  .gitignore  .prettierrc  README.md  TODO.md  index.html  nginx.conf  package-lock.json  package.json
client/src/: config.ts  index.css  main.jsx
client/src/archive/: ColorPicker.jsx
client/src/assets/: INFO.md
client/src/comp/: Cell.tsx  Chat.tsx  GameBoard.tsx  Leaderboard.tsx  Login.tsx  Modal.tsx  Nav.tsx
client/src/comp/styles/: Chat.css  GameBoard.css  Leaderboard.css  Login.css  Nav.css
client/src/hooks/: INFO.md  useBoard.ts  useWebSocket.ts
client/src/lib/: api.js  check-winner.js  utils.js
client/src/models/: Board.ts  Cell.ts  Types.ts
client/src/pages/: Game.css  Game.tsx  INFO.md  pages.css
keys/: cert.pem  key.pem
src/: cli_args.rs  config.rs  main.rs  server.rs  web.rs
src/algos/: minimax.rs  mod.rs
src/db/: models.rs
src/games/: connect4.rs  eval.rs  mod.rs
src/models/: minimax.rs
src/routes/: auth.rs  connect4.rs  mod.rs  utils.rs
src/web/: auth.rs  connect4.rs  router.rs  server.rs
