[package]
name = "player2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["ws"] }
dotenv = "0.15.0"
hyper = { version = "0.14.27", features = ["full"]} 
tokio = { version = "1.32.0", features = ["full"]} 
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.4.3", features = ["full"]} 
rand = "0.8.5"
mongodb = "2.8.0"
axum_session = "0.11.1"
once_cell = "1.19.0"
